--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,13 +53,13 @@ nav ul li a {
 
 .logo {
     text-align: center;
-    width: 212px;
-    height: 80px;
+    width: 15em;
+    /*height: 80px;*/
 }
 
 .logo-footer {
     width: 80%;
-    height: 80%
+    /*height: 80%*/
 }
 
 .logo img {
