create main our_client

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,9 +21,13 @@ html {
     line-height: 38px;
 }
 
-.sub-banner {
+.img-banner {
     width: 100%;
-    height: 265px;
+    height: 100%;
+}
+.box-banner {
+    width: 100%;
+    height: 240px;
 }
 
 .head-title{
