--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,7 +27,7 @@ html {
 }
 .box-banner {
     width: 100%;
-    height: 240px;
+    max-height: 240px;
     /*min-height: 240px;*/
     /*max-height: 245px;*/
 }
